Fix for image stretching on very large monitors

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,7 +118,6 @@ body {
 		width: 240px;
 	}
 	.photo-elem img {
-		max-height: 480px;
 	}
 }
 /* Medium desktops and up */
@@ -140,7 +139,6 @@ body {
 		margin-bottom: 20px;
 	}
 	.photo-elem img {
-		max-height: 480px;
 	}
 }
 
